tests/tooling/fixtures/native/execution/negative/return_void_with_value.objc3
module ReturnVoidWithValue;

fn helper() -> void {
  return 1;
}

fn main() -> i32 {
  helper();
  return 0;
}
